Pick latest tag all tags

--- a/dgraph/Makefile
+++ b/dgraph/Makefile
@@ -18,7 +18,7 @@ BIN            = dgraph
 BUILD         ?= $(shell git rev-parse --short HEAD)
 BUILD_DATE    ?= $(shell git log -1 --format=%ci)
 BUILD_BRANCH  ?= $(shell git rev-parse --abbrev-ref HEAD)
-BUILD_VERSION ?= $(shell git describe --always --tags)
+BUILD_VERSION ?= $(shell git for-each-ref refs/tags --sort=-taggerdate --format='%(refname:short)' --count=1)  # find the latest tag by timestamp
 BUILD_TAGS    ?=
 GOPATH        ?= $(shell go env GOPATH)
 
